--- a/mos.yml
+++ b/mos.yml
@@ -1,14 +1,13 @@
-author: mongoose-os
-description: A JS-enabled demo Mongoose OS firmware
+author: Andrejus Kostarevas
+description: Firmware for the iowine project.
 arch: cc3220
-version: 1.0
-manifest_version: 2017-05-18
+version: 0.1
+manifest_version: 2017-07-29
 libs_version: ${mos.version}
 modules_version: ${mos.version}
 mongoose_os_version: ${mos.version}
 
 config_schema:
-  - ["mqtt.server", "iot.eclipse.org:1883"]
   - ["i2c.enable", true]
 
 tags:
