--- a/mos.yml
+++ b/mos.yml
@@ -26,6 +26,7 @@ config_schema:
   - ["wifi.ap.enable", true]
   - ["wifi.ap.ssid", "IoWine-??????"]
   - ["wifi.ap.pass", "winesetup"]
+  - ["wifi.sta_connect_timeout", 30]
   - ["wifi.sta.ca_cert", "eduroam.crt"]
 
 manifest_version: 2017-07-29
